--- a/calculator.html
+++ b/calculator.html
@@ -12,6 +12,14 @@ num.value = Math.pow(num.value,4);
 
 }
 
+function sin() {
+
+var num = document.getElementById("n1");
+
+num.value = Math.sin(num.value);
+
+}
+
 </script>
 
 </head>
@@ -24,6 +32,7 @@ Number:
 <input type="text" id="n1"><p>
 
 <button onclick="cube()"> x^4 </button>
+<button onclick="sin()"> (sin(x)) </button>
 
 </body>
 
